# Algorytmy

./: CMakeLists.txt  readme.md
1-Róże/: readme.md
2-Grządki/: main.cpp  readme.md
3-MechanicznyP/: main.cpp  readme.md
4-DecyzyjnyP/: main.cpp  readme.md
5-Pożar/: main.cpp
6-Działki/: main.cpp
BFS for a Graph/: readme.md
Backtracking/: main.cpp  readme.md
Binary Heap/: main.cpp  readme.md
Counting Sort & Sieve of Eratosthenes/: main.cpp
Divide and Conquer & Quick Sort/: readme.md
Dynamic Programming/: main.cpp  readme.md
Insertion Sort/: main.cpp
Linked List (doubly circular)/: readme.md
Radix Sort/: main.cpp  readme.md
Tree/: readme.md
