cmake_minimum_required(VERSION 3.13.4)
project(Algorytmy)

add_executable(${PROJECT_NAME}
        "Counting Sort & Sieve of Eratosthenes/main.cpp"
#        "Insertion Sort/main.cpp"
#        "Linked List (doubly circular)/main.cpp"
#        "Tree/main.cpp"
#        "BFS for a Graph/main.cpp"
#        "Divide and Conquer & Quick Sort/main.cpp"
#        "Dynamic Programming/main.cpp"
#        "Backtracking/main.cpp"
#        "Radix Sort/main.cpp"
#        "Binary Heap/main.cpp"
        )
